# SimpleWebWithRust

./: .dockerignore  .env  Cargo.toml  Dockerfile  build_rs_cov.profraw  config-default-docker.toml  config-default.toml  config-default.yaml  config.dev.yaml  doc_write_dockerfile.txt  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: rust-cd.yml  rust-ci.yml  rust-clippy.yml
assets/migrationJson/: users.json
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
memory-database-impl/: Cargo.toml
migrations/: 20240729112756_users_table.up.sql  20240802113719_companies_table.down.sql  20240802113719_companies_table.up.sql  20240802122842_resumes_table.down.sql  20240802122842_resumes_table.up.sql  20240806031840_role_table.down.sql  20240806031840_role_table.up.sql  20240806031847_job_table.down.sql  20240806031847_job_table.up.sql  20240808044729_map_resume_job_table.down.sql  20240808044729_map_resume_job_table.up.sql
migrations/postgres/: sample.sql
src/: errors.rs  main.rs
src/_tests/: model_company.rs  model_job.rs  model_resume.rs  model_store.rs  model_user.rs  route_company.rs  route_job.rs
src/config/: config-default.yaml  config.rs  configEnv.rs  mod.rs
src/configs/: config.rs
src/controllers/: company.rs  companyController.rs  job.rs  mod.rs  resume.rs  role.rs  user.rs  userController.rs
src/middleware/: authen.rs  convert_to_json.rs  jwt.rs  mod.rs
src/models/: company.rs  impl_trait_db.rs  job.rs  map_resume_job.rs  mod.rs  pagination.rs  resume.rs  role.rs  store.rs  store_db.rs  store_impl_company.rs  store_impl_job.rs  store_impl_resume.rs  store_impl_role.rs  store_impl_user.rs  store_in_memory.rs  store_trait.rs  user.rs
src/routes/: company.rs  companyRoute.rs  job.rs  mod.rs  resume.rs  user.rs  userRoute.rs
src/service/: convert_to_json.rs  handle_errors.rs  jwt.rs  mod.rs  telemetry.rs
src/services/: jwt.rs  mod.rs  telemetry.rs
src/tests/: mod.rs  model_company.rs  model_job.rs  model_resume.rs  model_store.rs  model_user.rs  route_company.rs  route_job.rs  route_resume.rs  route_test.rs  route_user.rs
src/utils/: convert_to_json.rs  mod.rs
