[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
handle-errors = { path = "handle-errors", version = "0.1.0" }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
dotenv = "0.15.0"
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
regex = { version = "1", features = ["unicode-case"] }
jsonwebtoken = "9.3.0"
config = "0.14.0"
