[package]
edition = "2021"
name = "rust-api-service"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.81"
chrono = "0.4.19"
clap = { version = "4.5.17", features = ["derive"] }
config = "0.14.0"
dotenv = "0.15.0"
futures-util = "0.3"
jsonwebtoken = "9.3.0"
opentelemetry = { version = "0.24.0" }
opentelemetry-otlp = { version = "0.17.0", features = ["tonic"] }
opentelemetry-semantic-conventions = { version = "0.16.0" }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
proc-macro2 = "1.0"
rand = "0.8"
regex = { version = "1", features = ["unicode-case"] }
reqwest = { version = "0.11", features = ["json"] }
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "migrate",
  "postgres",
] }
thiserror = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = { version = "0.3.9" }
tracing-opentelemetry = { version = "0.25.0" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
warp = "0.3"

[profile.dev]
# Development profile settings (default is used if not specified)
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
split-debuginfo = '...' # Platform-specific.
strip = "none"

[profile.release]
# Release profile settings
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
